# api-rust

./: .env  Cargo.toml  Dockerfile  README.md  reqs.http
src/: health.rs  main.rs  repository.rs  user.rs
src/db/: config.rs  database.rs  errors.rs  handlers.rs  mod.rs
src/v1/: mod.rs  users.rs
