[package]
name = "api-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
config = "0.11"
dotenv = "0.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features= ["serde"]}
serde_json = "1.0"
serde = "1"
thiserror = "1"
derive_more = "0.99"
async-trait = "0.1"
deadpool-postgres = "0.5.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"

[dev-dependencies]
actix-rt = "2"
mockall = "0.10"
